[workspace.package]
name = "catzero2"
version = "0.1.0"
edition = "2024"
authors = ["BlockCat"]
description = "An AlphaZero implementation in Rust"
publish = false
repository = "https://github.com/BlockCat/catzero2"


[workspace]
members = [
    "alphazero_chess",
    "mcts",
    "alphazero_tictactoe",
    "alphazero_nn",
    "alphazero_player",
]
resolver = "3"

[workspace.dependencies]

rand = "0.9.2"
chess = "3.2.0"
futures = "0.3"

actix-web = "4.9"

tokio = "1.42"
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11.8"

thiserror = "2"
anyhow = "1.0.100"


safetensors = "0.6.0"
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }

mcts = { path = "mcts" }
alphazero_nn = { path = "alphazero_nn" }
alphazero_player = { path = "alphazero_player", features = ["cuda"] }
alphazero_tictactoe = { path = "alphazero_tictactoe" }
alphazero_chess = { path = "alphazero_chess" }
