[package]
name = "alphazero_player"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
# actix-rt = "2.10"
# actix = "0.13"
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Workspace dependencies
mcts = { path = "../mcts" }
alphazero_nn = { path = "../alphazero_nn" }
alphazero_chess = { path = "../alphazero_chess", optional = true}

# Neural network
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }


# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11.8"
anyhow = "1.0.100"
safetensors = "0.6.0"

[features]
default = ["chess"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "alphazero_nn/cuda"]
cudnn = ["candle-core/cudnn", "candle-nn/cudnn", "alphazero_nn/cudnn"]

chess = ["alphazero_chess"]
