[package]
name = "alphazero_player"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix
actix-web = { workspace = true }

# Tokio
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Workspace dependencies
mcts = { workspace = true }
alphazero_nn = { workspace = true }
alphazero_chess = { workspace = true, optional = true }

# Neural network
candle-core = { workspace = true }
candle-nn = { workspace = true }


# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
env_logger = { workspace = true }
safetensors = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["chess", "cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "alphazero_nn/cuda"]
cudnn = ["candle-core/cudnn", "candle-nn/cudnn", "alphazero_nn/cudnn"]

chess = ["alphazero_chess"]
